# bibe-as

./: .gitignore  Cargo.toml  README.md
examples/: divz.s  fib.s  idt.s  print.s  test.s
src/: emitter.rs  main.rs  state.rs
src/emitter/: annotated.rs  mod.rs
