[package]
name = "bibe-as"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bibe-asm = { path = "../bibe-asm" }
bibe-instr = { path = "../bibe-instr" }
clap = "4.1.4"
log = "0.4.17"
simplelog = "0.12.0"